--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
@@ -33,54 +33,137 @@
     .btn-primary { background: #000; color: #fff; }
     .btn-primary:hover { background: #333; transform: translateY(-2px); box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15); }
     .btn-secondary { background: transparent; color: #000; border: 2px solid #000; }
-    .btn-secondary:hover { background: #000; color: #/* CAROUSEL 3D - APPLE COVERFLOW */
-.hero-carousel {
-  position: relative;
-  width: 100%;
-  height: 450px;
-  perspective: 1400px;
-  overflow: visible;
-}
+    .btn-secondary:hover { background: #000; color: #fff; }
 
-.carousel-container {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  transform-style: preserve-3d;
-}
+    /* CAROUSEL 3D - ESFERA REAL */
+    .hero-carousel {
+      position: relative;
+      width: 100%;
+      height: 450px;
+      border-radius: 20px;
+      overflow: visible;
+      perspective: 800px;
+      background: transparent;
+    }
 
-.carousel-slide {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 320px;
-  height: 420px;
-  transform-style: preserve-3d;
-  border-radius: 22px;
-  background-size: cover;
-  background-position: center;
-  box-shadow:
-    0 40px 120px rgba(0,0,0,.35),
-    inset 0 0 0 1px rgba(255,255,255,.12);
-  transition:
-    transform 0.9s cubic-bezier(.22,.61,.36,1),
-    opacity 0.6s ease,
-    filter 0.6s ease;
-  will-change: transform;
-}
+    .carousel-container {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      transform-style: preserve-3d;
+      --angle: 0deg;
+      transform: rotateY(var(--angle)) rotateX(var(--angle-x, 0deg));
+      transition: transform 0.95s cubic-bezier(0.34, 1.56, 0.64, 1);
+      filter: drop-shadow(0 50px 150px rgba(0, 0, 0, 0.45));
+    }
 
-.carousel-slide::after {
-  content: '';
-  position: absolute;
-  inset: 0;
-  border-radius: inherit;
-  background: linear-gradient(
-    135deg,
-    rgba(255,255,255,.12),
-    rgba(0,0,0,.25)
-  );
-  pointer-events: none;
-}
+    .carousel-slide {
+      position: absolute;
+      width: 85%;
+      height: 85%;
+      left: 7.5%;
+      top: 7.5%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      border-radius: 20px;
+      border: 2px solid rgba(255, 255, 255, 0.15);
+      box-shadow:
+        0 25px 80px rgba(0, 0, 0, 0.5),
+        inset 0 0 40px rgba(0, 0, 0, 0.1);
+      transition: all 0.9s cubic-bezier(0.34, 1.56, 0.64, 1);
+      backface-visibility: hidden;
+    }
+
+    .carousel-slide::before {
+      content: '';
+      position: absolute;
+      inset: 0;
+      background: linear-gradient(
+        135deg,
+        rgba(255, 255, 255, 0.1) 0%,
+        rgba(255, 255, 255, 0) 50%,
+        rgba(0, 0, 0, 0.2) 100%
+      );
+      border-radius: 16px;
+      pointer-events: none;
+    }
+
+    .carousel-slide:nth-child(1) {
+      transform: rotateY(0deg) rotateX(0deg) translateZ(280px);
+      z-index: 6;
+      opacity: 1;
+      filter: brightness(1);
+    }
+
+    .carousel-slide:nth-child(2) {
+      transform: rotateY(72deg) rotateX(-35deg) translateZ(280px);
+      z-index: 4;
+      opacity: 0.85;
+      filter: brightness(0.80);
+    }
+
+    .carousel-slide:nth-child(3) {
+      transform: rotateY(144deg) rotateX(-35deg) translateZ(280px);
+      z-index: 3;
+      opacity: 0.80;
+      filter: brightness(0.70);
+    }
+
+    .carousel-slide:nth-child(4) {
+      transform: rotateY(180deg) rotateX(0deg) translateZ(280px);
+      z-index: 1;
+      opacity: 0.65;
+      filter: brightness(0.55);
+    }
+
+    .carousel-slide:nth-child(5) {
+      transform: rotateY(216deg) rotateX(35deg) translateZ(280px);
+      z-index: 3;
+      opacity: 0.80;
+      filter: brightness(0.70);
+    }
+
+    .carousel-slide:nth-child(6) {
+      transform: rotateY(288deg) rotateX(35deg) translateZ(280px);
+      z-index: 4;
+      opacity: 0.85;
+      filter: brightness(0.80);
+    }
+
+    .carousel-dots {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      gap: 8px;
+      z-index: 10;
+    }
+
+    .dot {
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background: rgba(255, 255, 255, 0.6);
+      cursor: pointer;
+      transition: all 0.3s;
+    }
+
+    .dot.active {
+      background: #fff;
+      width: 24px;
+      border-radius: 4px;
+    }
+
+    @media (prefers-reduced-motion: reduce) {
+      .carousel-container {
+        transition: none;
+      }
+    }
 
     .clients-section { padding: 60px 40px; background: #f9f9f9; border-top: 1px solid #e5e5e5; border-bottom: 1px solid #e5e5e5; }
     .clients-title { text-align: center; color: #999; font-size: 0.95rem; font-weight: 600; margin-bottom: 30px; letter-spacing: 0.5px; }
@@ -480,60 +563,41 @@
 </footer>
 
 <script>
-  <script>
   const slides = Array.from(document.querySelectorAll('.carousel-slide'));
   const dotsContainer = document.getElementById('carousel-dots');
+  const carousel = document.querySelector('.carousel-container');
+  const prefersReducedMotion = window.matchMedia('(prefers-reduced-motion: reduce)').matches;
 
-  let active = Math.floor(slides.length / 2);
-
-  const spacing = 360;
-  const rotate = 18;
-
-  slides.forEach((_, i) => {
+  slides.forEach((_, index) => {
     const dot = document.createElement('div');
-    dot.className = `dot ${i === active ? 'active' : ''}`;
+    dot.className = `dot ${index === 0 ? 'active' : ''}`;
     dotsContainer.appendChild(dot);
   });
 
-  const dots = [...dotsContainer.children];
+  const dots = Array.from(dotsContainer.children);
+  let currentSlide = 0;
+  let autoTimer;
+  const angleStep = slides.length ? 360 / slides.length : 90;
 
-  function render() {
-    slides.forEach((slide, i) => {
-      const offset = i - active;
+  const setSlide = (index) => {
+    if (!slides.length) return;
+    currentSlide = (index + slides.length) % slides.length;
+    const angle = -currentSlide * angleStep;
+    const angleX = Math.sin((currentSlide / slides.length) * Math.PI * 2) * 25;
+    carousel.style.setProperty('--angle', `${angle}deg`);
+    carousel.style.setProperty('--angle-x', `${angleX}deg`);
+    dots.forEach((dot, idx) => dot.classList.toggle('active', idx === currentSlide));
+  };
 
-      slide.style.transform = `
-        translate(-50%, -50%)
-        translateX(${offset * spacing}px)
-        translateZ(${offset === 0 ? 140 : -Math.abs(offset) * 120}px)
-        rotateY(${offset * -rotate}deg)
-        scale(${offset === 0 ? 1.08 : 0.82})
-      `;
+  const stopAuto = () => {
+    if (autoTimer) clearInterval(autoTimer);
+  };
 
-      slide.style.opacity = offset === 0 ? '1' : '0.45';
-      slide.style.filter = offset === 0 ? 'none' : 'blur(2px)';
-      slide.style.zIndex = 100 - Math.abs(offset);
-    });
-
-    dots.forEach((d, i) =>
-      d.classList.toggle('active', i === active)
-    );
-  }
-
-  slides.forEach((slide, i) => {
-    slide.addEventListener('click', () => {
-      active = i;
-      render();
-    });
-  });
-
-  window.addEventListener('wheel', (e) => {
-    active += e.deltaY > 0 ? 1 : -1;
-    active = Math.max(0, Math.min(slides.length - 1, active));
-    render();
-  }, { passive: true });
-
-  render();
-</script>
+  const startAuto = () => {
+    if (prefersReducedMotion) return;
+    stopAuto();
+    autoTimer = setInterval(() => setSlide(currentSlide + 1), 4500);
+  };
 
   dots.forEach((dot, idx) => {
     dot.addEventListener('click', () => {
@@ -579,4 +643,3 @@
 
 </body>
 </html>
-
