--- a/index.html
+++ b/index.html
@@ -1067,6 +1067,7 @@
           <a href="figma-to-wordpress.html">Figma a WordPress</a>
           <a href="figma-to-html.html">Figma a HTML</a>
           <a href="figma-to-webflow.html">Figma a Webflow</a>
+          <a href="ejemplos-amazon.html">Ejemplos Amazon</a>
         </div>
       </div>
       <a href="#proyectos">Proyectos</a>
@@ -1486,7 +1487,7 @@
   <div class="footer-container">
     <div class="footer-section">
       <h3>Compañía</h3>
-      <ul><li><a href="#servicios">Servicios</a></li><li><a href="#proyectos">Proyectos</a></li><li><a href="#proceso">Proceso</a></li><li><a href="#faq">FAQ</a></li><li><a href="blog.html">Blog</a></li></ul>
+      <ul><li><a href="#servicios">Servicios</a></li><li><a href="#proyectos">Proyectos</a></li><li><a href="#proceso">Proceso</a></li><li><a href="#faq">FAQ</a></li><li><a href="blog.html">Blog</a></li><li><a href="ejemplos-amazon.html">Ejemplos Amazon</a></li></ul>
     </div>
     <div class="footer-section">
       <h3>Redes</h3>
